--- a/PetShop/src/main/resources/application.properties
+++ b/PetShop/src/main/resources/application.properties
@@ -4,3 +4,4 @@ spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=PetShop;encry
 spring.datasource.username=sa
 spring.datasource.password=songlong
 spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
